# mpvlock

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  flake.nix
.config/mpvlock/: mpvlock.conf
.config/mpvlock/scripts/: cputemp.sh  gputemp.sh  weather.sh
.config/mpvlock/themes/neon_jinx/: mpvlock.conf
.config/mpvlock/themes/solitude/: mpvlock.conf
nix/: default.nix  overlays.nix
pam/: mpvlock
src/: defines.hpp  main.cpp
src/auth/: Auth.cpp  Auth.hpp  Fingerprint.cpp  Pam.cpp
src/config/: ConfigManager.cpp
src/core/: AnimationManager.cpp  AnimationManager.hpp  LockSurface.cpp  Output.cpp  Seat.cpp  mpvlock.cpp  mpvlock.hpp
src/helpers/: MiscFunctions.cpp
src/renderer/: AsyncResourceGatherer.cpp  Renderer.cpp  Renderer.hpp  Screencopy.cpp
src/renderer/widgets/: Background.cpp  Background.hpp  IWidget.cpp  IWidget.hpp  Image.cpp  Image.hpp  Label.cpp  Label.hpp  PasswordInputField.cpp  PasswordInputField.hpp  Shape.cpp  Shape.hpp
